--- a/index.html
+++ b/index.html
@@ -42,30 +42,30 @@
       <div class="container text-center prof">
         <div class="row justify-content-center">
           <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="../portfolio/pic/css-3.svg" alt="Kiwi standing on oval" />
+            <img style="width: 50%; height: 50%;" src="./pic/css-3.svg" alt="Kiwi standing on oval" />
           </div>
           <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="../portfolio/pic/react.svg" alt="Kiwi standing on oval" />
+            <img style="width: 50%; height: 50%;" src="./pic/react.svg" alt="Kiwi standing on oval" />
           </div>
           <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="../portfolio/pic/html-5.svg" alt="Kiwi standing on oval" />
+            <img style="width: 50%; height: 50%;" src="./pic/html-5.svg" alt="Kiwi standing on oval" />
           </div>
           <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="../portfolio/pic/bootstrap.svg" alt="Kiwi standing on oval" />
+            <img style="width: 50%; height: 50%;" src="./pic/bootstrap.svg" alt="Kiwi standing on oval" />
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="../portfolio/pic/git-icon.svg" alt="Kiwi standing on oval" />
+            <img style="width: 50%; height: 50%;" src="./pic/git-icon.svg" alt="Kiwi standing on oval" />
           </div>
           <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="../portfolio/pic/javascript.svg" alt="Kiwi standing on oval" />
+            <img style="width: 50%; height: 50%;" src="./pic/javascript.svg" alt="Kiwi standing on oval" />
           </div>
           <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="../portfolio/pic/python.svg" alt="Kiwi standing on oval" />
+            <img style="width: 50%; height: 50%;" src="./pic/python.svg" alt="Kiwi standing on oval" />
           </div>
           <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="../portfolio/pic/flask.svg" alt="Kiwi standing on oval" />
+            <img style="width: 50%; height: 50%;" src="./pic/flask.svg" alt="Kiwi standing on oval" />
           </div>
         </div>
       </div>
