--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="container main">
         <p class="col-8 offset-2 pl-3 text-center" style="word-break: break-all; font: caption; color: #707070;">
-          A Passinate aspiring Full Stack Developer skilled in the mean stack, mouled and shaped ny Masai school's intensive and immensive learining. Look forwad to join a campony where I shall be able to contribute towards individual and
+          A Passinate aspiring Full Stack Developer skilled in the mean stack, moulded and shaped by Masai school's intensive and immensive learining. Look forwad to join a campany where I shall be able to contribute towards individual and
           company growth.
         </p>
       </div>
@@ -113,8 +113,10 @@
                 <div class="round text-center shadow-lg">
                   <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">200+</h2>
                 </div>
-                <h1>Hours</h1>
-                <p>of full stack coding</p>
+                <div class="box" style="margin-left: 0.5rem;">
+                  <h1>Hours</h1>
+                  <p>of full stack coding</p>
+                </div>
               </div>
             </div>
           </div>
@@ -122,10 +124,11 @@
             <div class="card" style="background-color: transparent; border: none;">
               <div class="card-body">
                 <div class="round text-center shadow-lg">
-                  <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">200+</h2>
+                  <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">300+</h2>
                 </div>
-                <h1>Hours</h1>
-                <p>of full stack coding</p>
+
+                <h1>Hackrank</h1>
+                <p class="ml-5">Problems</p>
               </div>
             </div>
           </div>
@@ -133,10 +136,10 @@
             <div class="card" style="background-color: transparent; border: none;">
               <div class="card-body">
                 <div class="round text-center shadow-lg">
-                  <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">200+</h2>
+                  <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">300+</h2>
                 </div>
-                <h1>Hours</h1>
-                <p>of full stack coding</p>
+                <h1 class="ml-5">Git</h1>
+                <p class="ml-5">commits</p>
               </div>
             </div>
           </div>
