--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
-    <title>Hello, world!</title>
+    <title>Abhishek | FrontDev</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
   </head>
@@ -26,29 +26,26 @@
       <div class="conatiner text-center section_loaction">
         <span>
           <i class="fa fa-map-marker fa-fw"></i>
-          <span class="mr-4 intro">Banglore, India</span>
+          <span class="mr-4 intro">Kolkata, India</span>
           <i class="fa fa-phone fa-fw"></i>
           <span class="mr-4">+91 8340663803</span>
           <i class="fa fa-envelope fa-fw"></i>
-          <span class="mr-4 intro">abhishekk.it2017.nsec.ac.in</span>
+          <span class="mr-4 intro">abhishekkumar9608@gmail.com</span>
         </span>
       </div>
       <div class="container main">
-        <p class="col-8 offset-2 pl-3 text-center" style="word-break: break-all; font: caption; color: #707070;">
+        <p class="col-8 offset-2 pl-3 text-center">
           A Passinate aspiring Full Stack Developer skilled in the mean stack, moulded and shaped by Masai school's intensive and immensive learining. Look forwad to join a campany where I shall be able to contribute towards individual and
-          company growth.
+          company growth. <em class="font-italic resume">View full resume</em>
         </p>
       </div>
       <div class="container text-center prof">
         <div class="row justify-content-center">
           <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="./pic/css-3.svg" alt="Kiwi standing on oval" />
-          </div>
-          <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="./pic/react.svg" alt="Kiwi standing on oval" />
-          </div>
-          <div class="col-lg-2 col-md-6">
             <img style="width: 50%; height: 50%;" src="./pic/html-5.svg" alt="Kiwi standing on oval" />
+          </div>
+          <div class="col-lg-2 col-md-6">
+            <img style="width: 50%; height: 50%;" src="./pic/css-3.svg" alt="Kiwi standing on oval" />
           </div>
           <div class="col-lg-2 col-md-6">
             <img style="width: 50%; height: 50%;" src="./pic/bootstrap.svg" alt="Kiwi standing on oval" />
@@ -56,49 +53,112 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-2 col-md-6">
+            <img style="width: 50%; height: 50%;" src="./pic/react.svg" alt="Kiwi standing on oval" />
+          </div>
+          <div class="col-lg-2 col-md-6">
             <img style="width: 50%; height: 50%;" src="./pic/git-icon.svg" alt="Kiwi standing on oval" />
           </div>
           <div class="col-lg-2 col-md-6">
             <img style="width: 50%; height: 50%;" src="./pic/javascript.svg" alt="Kiwi standing on oval" />
           </div>
-          <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="./pic/python.svg" alt="Kiwi standing on oval" />
-          </div>
-          <div class="col-lg-2 col-md-6">
-            <img style="width: 50%; height: 50%;" src="./pic/flask.svg" alt="Kiwi standing on oval" />
-          </div>
         </div>
+      </div>
+    </div>
+    <div class="row mx-0 mb-5">
+      <div class="col-8 text-center offset-2 portfolio">
+        <p>Portfolio</p>
       </div>
     </div>
     <div class="container-fluid">
       <div class="row h-100 justify-content-center align-items-center">
         <div class="col-lg-3 col-md-6">
           <div class="card">
-            <img src="./pic/Screenshot from 2020-05-08 17-48-32.png" class="card-img-top" alt="..." />
+            <img src="./pic/exten.gif" class="card-img-top w-80" style="height: 300px;" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title text-center">CHROME EXTENSION</h5>
+              <p class="card-text text-center">
+                A chrome Extension made from scratch using Vanilla JS. which shows covid data around globe.
+              </p>
+              <p id="tag">Vanilla JavaScript</p>
+              <div class="row mx-2">
+                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
+                <a href="https://github.com/Abhishek9608/covid_chrome_extension" class="btn mx-1 source">Source</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <img src="./pic/Eyo.png" style="height: 300px;" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-center">OYO CLONE</h5>
+              <p class="card-text text-center">A Clone of OYO made with React and Redux and BackEnd. where I have created the Front End UI</p>
+              <p id="tag">React.js, redux, Bootstrap</p>
+              <div class="row mx-2">
+                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
+                <a href="#" class="btn mx-1 source">Source</a>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="card">
-            <img src="./pic/Screenshot from 2020-05-08 17-48-32.png" class="card-img-top" alt="..." />
+            <img src="./pic/Todo.png" class="card-img-top w-80" style="height: 300px;" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title text-center">TODO APP</h5>
+              <p class="card-text text-center">A TODO App made with React.js,where you can add, delete, edit and update</p>
+              <p id="tag">React.js</p>
+              <div class="row mx-2">
+                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
+                <a href="#" class="btn mx-1 source">Source</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid mt-5">
+      <div class="row h-100 justify-content-center align-items-center">
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <img src="./pic/food.png" style="height: 300px;" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-center">FOOD DELIVERY</h5>
+              <p class="card-text text-center">A Food delivery App made with React and Redux. where I have added basic Auth to signup</p>
+              <p id="tag">React.js , Redux, Bootstrap</p>
+              <div class="row mx-2">
+                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
+                <a href="#" class="btn mx-1 source">Source</a>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="card">
-            <img src="./pic/Screenshot from 2020-05-08 17-48-32.png" class="card-img-top" alt="..." />
+            <img src="./pic/food.png" style="height: 300px;" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title text-center">FOOD DELIVERY</h5>
+              <p class="card-text">A Food delivery App made with React and Redux . where I have added basic Auth to signup</p>
+              <p id="tag">React.js , Redux, Bootstrap</p>
+              <div class="row mx-2">
+                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
+                <a href="#" class="btn mx-1 source">Source</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <img src="./pic/covid.png" style="height: 300px;" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-center">COVID TRAKER</h5>
+              <p class="card-text text-center">A Covid Traker App made with Vanilla javascipt . where we can se covid status around the globe</p>
+              <p id="tag">Vanilla.javascipt, Bootstrap</p>
+              <div class="row mx-2">
+                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
+                <a href="#" class="btn mx-1 source">Source</a>
+              </div>
             </div>
           </div>
         </div>
