--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
-    <title>Abhishek | FrontDev</title>
+    <title>Abhishek | Front End Dev</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
   </head>
@@ -16,12 +16,12 @@
     <div class="container-fluid p-0">
       <div class="section_main"></div>
       <div class="container text-center" id="section_picbox">
-        <img src="./pic/WhatsApp Image 2020-05-07 at 12.24.55 PM.jpeg" alt="" class="section_picture" />
+        <img src="./pic/profile1.jpeg" alt="" class="section_picture" />
         <div class="dot"></div>
       </div>
       <div class="container text-center section_typo">
         <h2 class="section_primary_1 font-weight-bold" style="color: #5d86b4;">Abhishek kumar</h2>
-        <h4 class="section_primary_2">Web Developer</h4>
+        <h4 class="section_primary_2">FrontEnd Developer</h4>
       </div>
       <div class="conatiner text-center section_loaction">
         <span>
@@ -35,8 +35,8 @@
       </div>
       <div class="container main">
         <p class="col-8 offset-2 pl-3 text-center">
-          A Passinate aspiring Full Stack Developer skilled in the mean stack, moulded and shaped by Masai school's intensive and immensive learining. Look forwad to join a campany where I shall be able to contribute towards individual and
-          company growth. <em class="font-italic resume">View full resume</em>
+          A Passinate aspiring FrontEnd Developer skilled in the mean stack, moulded and shaped by Masai school's intensive and immensive learining. Look forwad to join a campany where I shall be able to contribute towards individual and
+          company growth. <em class="font-italic resume"> <a href="https://drive.google.com/file/d/1NPRiv5ODJeKCZCN8RRgB0loxqA5SpmRZ/view?usp=sharing">View full resume</a> </em>
         </p>
       </div>
       <div class="container text-center prof">
@@ -77,11 +77,11 @@
             <div class="card-body">
               <h5 class="card-title text-center">CHROME EXTENSION</h5>
               <p class="card-text text-center">
-                A chrome Extension made from scratch using Vanilla JS. which shows covid data around globe.
+                A chrome Extension made from scratch using Vanilla JS. which using API of covid data and location to shows covid data around globe.
               </p>
               <p id="tag">Vanilla JavaScript</p>
               <div class="row mx-2">
-                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
+                <a href="#" class="btn btn-info mx-1 demo">Demo</a>
                 <a href="https://github.com/Abhishek9608/covid_chrome_extension" class="btn mx-1 source">Source</a>
               </div>
             </div>
@@ -96,8 +96,8 @@
               <p class="card-text text-center">A Clone of OYO made with React and Redux and BackEnd. where I have created the Front End UI</p>
               <p id="tag">React.js, redux, Bootstrap</p>
               <div class="row mx-2">
-                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
-                <a href="#" class="btn mx-1 source">Source</a>
+                <a href="https://eyo-rooms.vercel.app/" class="btn btn-info mx-1 demo">Demo</a>
+                <a href="https://github.com/Abhishek9608/EYO-rooms" class="btn mx-1 source">Source</a>
               </div>
             </div>
           </div>
@@ -107,11 +107,11 @@
             <img src="./pic/Todo.png" class="card-img-top w-80" style="height: 300px;" alt="..." />
             <div class="card-body">
               <h5 class="card-title text-center">TODO APP</h5>
-              <p class="card-text text-center">A TODO App made with React.js,where you can add, delete, edit and update</p>
+              <p class="card-text text-center">A TODO App made with React.js,where you can add, delete, edit and update the todo list on this App</p>
               <p id="tag">React.js</p>
               <div class="row mx-2">
-                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
-                <a href="#" class="btn mx-1 source">Source</a>
+                <a href="https://pensive-franklin-e93e55.netlify.app/" class="btn btn-info mx-1 demo">Demo</a>
+                <a href="https://github.com/Abhishek9608/Todo-App" class="btn mx-1 source">Source</a>
               </div>
             </div>
           </div>
@@ -128,21 +128,21 @@
               <p class="card-text text-center">A Food delivery App made with React and Redux. where I have added basic Auth to signup</p>
               <p id="tag">React.js , Redux, Bootstrap</p>
               <div class="row mx-2">
-                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
-                <a href="#" class="btn mx-1 source">Source</a>
+                <a href="https://eloquent-murdock-ac6e11.netlify.app/#/" class="btn btn-info mx-1 demo">Demo</a>
+                <a href="https://github.com/Abhishek9608/Food-delivery-system" class="btn mx-1 source">Source</a>
               </div>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="card">
-            <img src="./pic/food.png" style="height: 300px;" class="card-img-top" alt="..." />
+            <img src="./pic/iphone.png" style="height: 300px;" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title text-center">FOOD DELIVERY</h5>
-              <p class="card-text">A Food delivery App made with React and Redux . where I have added basic Auth to signup</p>
+              <h5 class="card-title text-center">IPHONE STORE</h5>
+              <p class="card-text">This web App is made using Bootstrap, css, react.js.In this I have done dynamic routing to the various pages over there.</p>
               <p id="tag">React.js , Redux, Bootstrap</p>
               <div class="row mx-2">
-                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
+                <a href="https://my-phone-web.netlify.app/" class="btn btn-info mx-1 demo">Demo</a>
                 <a href="#" class="btn mx-1 source">Source</a>
               </div>
             </div>
@@ -156,8 +156,8 @@
               <p class="card-text text-center">A Covid Traker App made with Vanilla javascipt . where we can se covid status around the globe</p>
               <p id="tag">Vanilla.javascipt, Bootstrap</p>
               <div class="row mx-2">
-                <a href="#" class="btn btn-info mx-1 demo">DOMO</a>
-                <a href="#" class="btn mx-1 source">Source</a>
+                <a href="https://abhishek9608.github.io/worldCovid/" class="btn btn-info mx-1 demo">Demo</a>
+                <a href="https://github.com/Abhishek9608/worldCovid-Info-App" class="btn mx-1 source">Source</a>
               </div>
             </div>
           </div>
