--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div class="container-fluid">
       <div class="row h-100 justify-content-center align-items-center">
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-6 my-4">
           <div class="card">
             <img src="./pic/exten.gif" class="card-img-top w-80" style="height: 300px;" alt="..." />
             <div class="card-body">
@@ -88,7 +88,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-6 my-4">
           <div class="card">
             <img src="./pic/Eyo.png" style="height: 300px;" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -102,7 +102,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-6 my-4">
           <div class="card">
             <img src="./pic/Todo.png" class="card-img-top w-80" style="height: 300px;" alt="..." />
             <div class="card-body">
@@ -120,7 +120,7 @@
     </div>
     <div class="container-fluid mt-5">
       <div class="row h-100 justify-content-center align-items-center">
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-6 my-4">
           <div class="card">
             <img src="./pic/food.png" style="height: 300px;" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -134,7 +134,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-6 my-4">
           <div class="card">
             <img src="./pic/iphone.png" style="height: 300px;" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -148,7 +148,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-6 my-4">
           <div class="card">
             <img src="./pic/covid.png" style="height: 300px;" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -168,38 +168,41 @@
       <div class="row h-100 align-items-center m-0 w-100">
         <div class="row justify-content-center py-5 w-100 m-0" style="background-color: #3bcec8;">
           <div class="col-lg-3 col-md-6">
-            <div class="card" style="background-color: transparent; border: none;">
-              <div class="card-body">
+            <div style="background-color: transparent; border: none;">
+              <div class="d-flex flex-column align-items-center">
+                <div class="round text-center shadow-lg">
+                  <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">1000+</h2>
+                </div>
+                <div class="box" style="margin-left: 0.5rem;">
+                  <h1>Hours</h1>
+                  <p class="text-center">of coding</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div style="background-color: transparent; border: none;">
+              <div class="d-flex flex-column align-items-center">
                 <div class="round text-center shadow-lg">
                   <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">200+</h2>
                 </div>
                 <div class="box" style="margin-left: 0.5rem;">
-                  <h1>Hours</h1>
-                  <p>of full stack coding</p>
+                  <h1>Hackerank</h1>
+                  <p class="text-center">Problems</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <div class="card" style="background-color: transparent; border: none;">
-              <div class="card-body">
+            <div style="background-color: transparent; border: none;">
+              <div class="d-flex flex-column align-items-center">
                 <div class="round text-center shadow-lg">
-                  <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">300+</h2>
+                  <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">200+</h2>
                 </div>
-
-                <h1>Hackrank</h1>
-                <p class="ml-5">Problems</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="card" style="background-color: transparent; border: none;">
-              <div class="card-body">
-                <div class="round text-center shadow-lg">
-                  <h2 style="transform: rotate(45deg);" class="mt-5 ml-1 text-light">300+</h2>
+                <div class="box" style="margin-left: 0.5rem;">
+                  <h1>Git</h1>
+                  <p>commits</p>
                 </div>
-                <h1 class="ml-5">Git</h1>
-                <p class="ml-5">commits</p>
               </div>
             </div>
           </div>
