--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </div>
       <div class="container main">
         <p class="col-8 offset-2 pl-3 text-center">
-          A Passinate aspiring FrontEnd Developer skilled in the mean stack, moulded and shaped by Masai school's intensive and immensive learining. Look forwad to join a campany where I shall be able to contribute towards individual and
-          company growth. <em class="font-italic resume"> <a href="https://drive.google.com/file/d/1-uKtE_JpZ-C41gOQyK6CU7Dvqr1J5TJt/view?usp=sharing">View full resume</a> </em>
+          A Passinate aspiring FrontEnd Developer, moulded and shaped by Masai school's intensive and immensive learining. Look forwad to join a campany where I shall be able to contribute towards individual and company growth.
+          <em class="font-italic resume"> <a href="https://drive.google.com/file/d/1-uKtE_JpZ-C41gOQyK6CU7Dvqr1J5TJt/view?usp=sharing">View full resume</a> </em>
         </p>
       </div>
       <div class="container text-center prof">
